# Agent-AI

./: .gitignore  README.md  alternatives.md  config.py  main.py  pyproject.toml
eval/: deepeval_config.yml  run_eval.py
services/: llm.py
